Fixed: about page text background now extends full height on mobile

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -493,7 +493,7 @@ body.about {
 							position: absolute;
 							display: block;
 							width: 100%;
-							height: 90%;
+							height: 95%;
 							background: linear-gradient(19deg, $about-pink 0%, $about-light-blue 100%);
 							opacity: 0.5;
 							z-index: -1;
